testdata/baselines/reference/submodule/compiler/typedArrays.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
typedArrays.ts(3,22): error TS2304: Cannot find name 'Int8Array'.
typedArrays.ts(4,22): error TS2304: Cannot find name 'Uint8Array'.
typedArrays.ts(5,22): error TS2304: Cannot find name 'Int16Array'.
typedArrays.ts(6,22): error TS2304: Cannot find name 'Uint16Array'.
typedArrays.ts(7,22): error TS2304: Cannot find name 'Int32Array'.
typedArrays.ts(8,22): error TS2304: Cannot find name 'Uint32Array'.
typedArrays.ts(9,22): error TS2304: Cannot find name 'Float32Array'.
typedArrays.ts(10,22): error TS2304: Cannot find name 'Float64Array'.
typedArrays.ts(11,22): error TS2304: Cannot find name 'Uint8ClampedArray'.
typedArrays.ts(18,26): error TS2304: Cannot find name 'Int8Array'.
typedArrays.ts(19,26): error TS2304: Cannot find name 'Uint8Array'.
typedArrays.ts(20,26): error TS2304: Cannot find name 'Int16Array'.
typedArrays.ts(21,26): error TS2304: Cannot find name 'Uint16Array'.
typedArrays.ts(22,26): error TS2304: Cannot find name 'Int32Array'.
typedArrays.ts(23,26): error TS2304: Cannot find name 'Uint32Array'.
typedArrays.ts(24,26): error TS2304: Cannot find name 'Float32Array'.
typedArrays.ts(25,26): error TS2304: Cannot find name 'Float64Array'.
typedArrays.ts(26,26): error TS2304: Cannot find name 'Uint8ClampedArray'.
typedArrays.ts(33,26): error TS2304: Cannot find name 'Int8Array'.
typedArrays.ts(34,26): error TS2304: Cannot find name 'Uint8Array'.
typedArrays.ts(35,26): error TS2304: Cannot find name 'Int16Array'.
typedArrays.ts(36,26): error TS2304: Cannot find name 'Uint16Array'.
typedArrays.ts(37,26): error TS2304: Cannot find name 'Int32Array'.
typedArrays.ts(38,26): error TS2304: Cannot find name 'Uint32Array'.
typedArrays.ts(39,26): error TS2304: Cannot find name 'Float32Array'.
typedArrays.ts(40,26): error TS2304: Cannot find name 'Float64Array'.
typedArrays.ts(41,26): error TS2304: Cannot find name 'Uint8ClampedArray'.
typedArrays.ts(48,22): error TS2304: Cannot find name 'Int8Array'.
typedArrays.ts(49,22): error TS2304: Cannot find name 'Uint8Array'.
typedArrays.ts(50,22): error TS2304: Cannot find name 'Int16Array'.
typedArrays.ts(51,22): error TS2304: Cannot find name 'Uint16Array'.
typedArrays.ts(52,22): error TS2304: Cannot find name 'Int32Array'.
typedArrays.ts(53,22): error TS2304: Cannot find name 'Uint32Array'.
typedArrays.ts(54,22): error TS2304: Cannot find name 'Float32Array'.
typedArrays.ts(55,22): error TS2304: Cannot find name 'Float64Array'.
typedArrays.ts(56,22): error TS2304: Cannot find name 'Uint8ClampedArray'.
typedArrays.ts(61,52): error TS2304: Cannot find name 'ArrayLike'.
typedArrays.ts(63,22): error TS2304: Cannot find name 'Int8Array'.
typedArrays.ts(64,22): error TS2304: Cannot find name 'Uint8Array'.
typedArrays.ts(65,22): error TS2304: Cannot find name 'Int16Array'.
typedArrays.ts(66,22): error TS2304: Cannot find name 'Uint16Array'.
typedArrays.ts(67,22): error TS2304: Cannot find name 'Int32Array'.
typedArrays.ts(68,22): error TS2304: Cannot find name 'Uint32Array'.
typedArrays.ts(69,22): error TS2304: Cannot find name 'Float32Array'.
typedArrays.ts(70,22): error TS2304: Cannot find name 'Float64Array'.
typedArrays.ts(71,22): error TS2304: Cannot find name 'Uint8ClampedArray'.
typedArrays.ts(78,22): error TS2304: Cannot find name 'Int8Array'.
typedArrays.ts(79,22): error TS2304: Cannot find name 'Uint8Array'.
typedArrays.ts(80,22): error TS2304: Cannot find name 'Int16Array'.
typedArrays.ts(81,22): error TS2304: Cannot find name 'Uint16Array'.
typedArrays.ts(82,22): error TS2304: Cannot find name 'Int32Array'.
typedArrays.ts(83,22): error TS2304: Cannot find name 'Uint32Array'.
typedArrays.ts(84,22): error TS2304: Cannot find name 'Float32Array'.
typedArrays.ts(85,22): error TS2304: Cannot find name 'Float64Array'.
typedArrays.ts(86,22): error TS2304: Cannot find name 'Uint8ClampedArray'.
typedArrays.ts(93,22): error TS2304: Cannot find name 'Int8Array'.
typedArrays.ts(94,22): error TS2304: Cannot find name 'Uint8Array'.
typedArrays.ts(95,22): error TS2304: Cannot find name 'Int16Array'.
typedArrays.ts(96,22): error TS2304: Cannot find name 'Uint16Array'.
typedArrays.ts(97,22): error TS2304: Cannot find name 'Int32Array'.
typedArrays.ts(98,22): error TS2304: Cannot find name 'Uint32Array'.
typedArrays.ts(99,22): error TS2304: Cannot find name 'Float32Array'.
typedArrays.ts(100,22): error TS2304: Cannot find name 'Float64Array'.
typedArrays.ts(101,22): error TS2304: Cannot find name 'Uint8ClampedArray'.
typedArrays.ts(106,45): error TS2304: Cannot find name 'ArrayLike'.
typedArrays.ts(108,22): error TS2304: Cannot find name 'Int8Array'.
typedArrays.ts(109,22): error TS2304: Cannot find name 'Uint8Array'.
typedArrays.ts(110,22): error TS2304: Cannot find name 'Int16Array'.
typedArrays.ts(111,22): error TS2304: Cannot find name 'Uint16Array'.
typedArrays.ts(112,22): error TS2304: Cannot find name 'Int32Array'.
typedArrays.ts(113,22): error TS2304: Cannot find name 'Uint32Array'.
typedArrays.ts(114,22): error TS2304: Cannot find name 'Float32Array'.
typedArrays.ts(115,22): error TS2304: Cannot find name 'Float64Array'.
typedArrays.ts(116,22): error TS2304: Cannot find name 'Uint8ClampedArray'.
typedArrays.ts(121,41): error TS2304: Cannot find name 'ArrayLike'.
typedArrays.ts(123,22): error TS2304: Cannot find name 'Int8Array'.
typedArrays.ts(124,22): error TS2304: Cannot find name 'Uint8Array'.
typedArrays.ts(125,22): error TS2304: Cannot find name 'Int16Array'.
typedArrays.ts(126,22): error TS2304: Cannot find name 'Uint16Array'.
typedArrays.ts(127,22): error TS2304: Cannot find name 'Int32Array'.
typedArrays.ts(128,22): error TS2304: Cannot find name 'Uint32Array'.
typedArrays.ts(129,22): error TS2304: Cannot find name 'Float32Array'.
typedArrays.ts(130,22): error TS2304: Cannot find name 'Float64Array'.
typedArrays.ts(131,22): error TS2304: Cannot find name 'Uint8ClampedArray'.
typedArrays.ts(136,43): error TS2304: Cannot find name 'ArrayLike'.
typedArrays.ts(138,22): error TS2304: Cannot find name 'Int8Array'.
typedArrays.ts(139,22): error TS2304: Cannot find name 'Uint8Array'.
typedArrays.ts(140,22): error TS2304: Cannot find name 'Int16Array'.
typedArrays.ts(141,22): error TS2304: Cannot find name 'Uint16Array'.
typedArrays.ts(142,22): error TS2304: Cannot find name 'Int32Array'.
typedArrays.ts(143,22): error TS2304: Cannot find name 'Uint32Array'.
typedArrays.ts(144,22): error TS2304: Cannot find name 'Float32Array'.
typedArrays.ts(145,22): error TS2304: Cannot find name 'Float64Array'.
typedArrays.ts(146,22): error TS2304: Cannot find name 'Uint8ClampedArray'.
typedArrays.ts(151,47): error TS2304: Cannot find name 'ArrayLike'.
typedArrays.ts(153,22): error TS2304: Cannot find name 'Int8Array'.
typedArrays.ts(154,22): error TS2304: Cannot find name 'Uint8Array'.
typedArrays.ts(155,22): error TS2304: Cannot find name 'Int16Array'.
typedArrays.ts(156,22): error TS2304: Cannot find name 'Uint16Array'.
typedArrays.ts(157,22): error TS2304: Cannot find name 'Int32Array'.
typedArrays.ts(158,22): error TS2304: Cannot find name 'Uint32Array'.
typedArrays.ts(159,22): error TS2304: Cannot find name 'Float32Array'.
typedArrays.ts(160,22): error TS2304: Cannot find name 'Float64Array'.
typedArrays.ts(161,22): error TS2304: Cannot find name 'Uint8ClampedArray'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== typedArrays.ts (104 errors) ====
    function CreateTypedArrayTypes() {
        var typedArrays = [];
        typedArrays[0] = Int8Array;
                         ~~~~~~~~~
!!! error TS2304: Cannot find name 'Int8Array'.
        typedArrays[1] = Uint8Array;
                         ~~~~~~~~~~
!!! error TS2304: Cannot find name 'Uint8Array'.
        typedArrays[2] = Int16Array;
                         ~~~~~~~~~~
!!! error TS2304: Cannot find name 'Int16Array'.
        typedArrays[3] = Uint16Array;
                         ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Uint16Array'.
        typedArrays[4] = Int32Array;
                         ~~~~~~~~~~
!!! error TS2304: Cannot find name 'Int32Array'.
        typedArrays[5] = Uint32Array;
                         ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Uint32Array'.
        typedArrays[6] = Float32Array;
                         ~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Float32Array'.
        typedArrays[7] = Float64Array;
                         ~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Float64Array'.
        typedArrays[8] = Uint8ClampedArray;
                         ~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Uint8ClampedArray'.
    
        return typedArrays;
    }
    
    function CreateTypedArrayInstancesFromLength(obj: number) {
        var typedArrays = [];
        typedArrays[0] = new Int8Array(obj);
                             ~~~~~~~~~
!!! error TS2304: Cannot find name 'Int8Array'.
        typedArrays[1] = new Uint8Array(obj);
                             ~~~~~~~~~~
!!! error TS2304: Cannot find name 'Uint8Array'.
        typedArrays[2] = new Int16Array(obj);
                             ~~~~~~~~~~
!!! error TS2304: Cannot find name 'Int16Array'.
        typedArrays[3] = new Uint16Array(obj);
                             ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Uint16Array'.
        typedArrays[4] = new Int32Array(obj);
                             ~~~~~~~~~~
!!! error TS2304: Cannot find name 'Int32Array'.
        typedArrays[5] = new Uint32Array(obj);
                             ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Uint32Array'.
        typedArrays[6] = new Float32Array(obj);
                             ~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Float32Array'.
        typedArrays[7] = new Float64Array(obj);
                             ~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Float64Array'.
        typedArrays[8] = new Uint8ClampedArray(obj);
                             ~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Uint8ClampedArray'.
    
        return typedArrays;
    }
    
    function CreateTypedArrayInstancesFromArray(obj: number[]) {
        var typedArrays = [];
        typedArrays[0] = new Int8Array(obj);
                             ~~~~~~~~~
!!! error TS2304: Cannot find name 'Int8Array'.
        typedArrays[1] = new Uint8Array(obj);
                             ~~~~~~~~~~
!!! error TS2304: Cannot find name 'Uint8Array'.
        typedArrays[2] = new Int16Array(obj);
                             ~~~~~~~~~~
!!! error TS2304: Cannot find name 'Int16Array'.
        typedArrays[3] = new Uint16Array(obj);
                             ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Uint16Array'.
        typedArrays[4] = new Int32Array(obj);
                             ~~~~~~~~~~
!!! error TS2304: Cannot find name 'Int32Array'.
        typedArrays[5] = new Uint32Array(obj);
                             ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Uint32Array'.
        typedArrays[6] = new Float32Array(obj);
                             ~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Float32Array'.
        typedArrays[7] = new Float64Array(obj);
                             ~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Float64Array'.
        typedArrays[8] = new Uint8ClampedArray(obj);
                             ~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Uint8ClampedArray'.
    
        return typedArrays;
    }
    
    function CreateIntegerTypedArraysFromArray2(obj:number[]) {
        var typedArrays = [];
        typedArrays[0] = Int8Array.from(obj);
                         ~~~~~~~~~
!!! error TS2304: Cannot find name 'Int8Array'.
        typedArrays[1] = Uint8Array.from(obj);
                         ~~~~~~~~~~
!!! error TS2304: Cannot find name 'Uint8Array'.
        typedArrays[2] = Int16Array.from(obj);
                         ~~~~~~~~~~
!!! error TS2304: Cannot find name 'Int16Array'.
        typedArrays[3] = Uint16Array.from(obj);
                         ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Uint16Array'.
        typedArrays[4] = Int32Array.from(obj);
                         ~~~~~~~~~~
!!! error TS2304: Cannot find name 'Int32Array'.
        typedArrays[5] = Uint32Array.from(obj);
                         ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Uint32Array'.
        typedArrays[6] = Float32Array.from(obj);
                         ~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Float32Array'.
        typedArrays[7] = Float64Array.from(obj);
                         ~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Float64Array'.
        typedArrays[8] = Uint8ClampedArray.from(obj);
                         ~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Uint8ClampedArray'.
    
        return typedArrays;
    }
    
    function CreateIntegerTypedArraysFromArrayLike(obj:ArrayLike<number>) {
                                                       ~~~~~~~~~
!!! error TS2304: Cannot find name 'ArrayLike'.
        var typedArrays = [];
        typedArrays[0] = Int8Array.from(obj);
                         ~~~~~~~~~
!!! error TS2304: Cannot find name 'Int8Array'.
        typedArrays[1] = Uint8Array.from(obj);
                         ~~~~~~~~~~
!!! error TS2304: Cannot find name 'Uint8Array'.
        typedArrays[2] = Int16Array.from(obj);
                         ~~~~~~~~~~
!!! error TS2304: Cannot find name 'Int16Array'.
        typedArrays[3] = Uint16Array.from(obj);
                         ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Uint16Array'.
        typedArrays[4] = Int32Array.from(obj);
                         ~~~~~~~~~~
!!! error TS2304: Cannot find name 'Int32Array'.
        typedArrays[5] = Uint32Array.from(obj);
                         ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Uint32Array'.
        typedArrays[6] = Float32Array.from(obj);
                         ~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Float32Array'.
        typedArrays[7] = Float64Array.from(obj);
                         ~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Float64Array'.
        typedArrays[8] = Uint8ClampedArray.from(obj);
                         ~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Uint8ClampedArray'.
    
        return typedArrays;
    }
    
    function CreateTypedArraysOf(obj) {
        var typedArrays = [];
        typedArrays[0] = Int8Array.of(...obj);
                         ~~~~~~~~~
!!! error TS2304: Cannot find name 'Int8Array'.
        typedArrays[1] = Uint8Array.of(...obj);
                         ~~~~~~~~~~
!!! error TS2304: Cannot find name 'Uint8Array'.
        typedArrays[2] = Int16Array.of(...obj);
                         ~~~~~~~~~~
!!! error TS2304: Cannot find name 'Int16Array'.
        typedArrays[3] = Uint16Array.of(...obj);
                         ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Uint16Array'.
        typedArrays[4] = Int32Array.of(...obj);
                         ~~~~~~~~~~
!!! error TS2304: Cannot find name 'Int32Array'.
        typedArrays[5] = Uint32Array.of(...obj);
                         ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Uint32Array'.
        typedArrays[6] = Float32Array.of(...obj);
                         ~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Float32Array'.
        typedArrays[7] = Float64Array.of(...obj);
                         ~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Float64Array'.
        typedArrays[8] = Uint8ClampedArray.of(...obj);
                         ~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Uint8ClampedArray'.
    
        return typedArrays;
    }
    
    function CreateTypedArraysOf2() {
        var typedArrays = [];
        typedArrays[0] = Int8Array.of(1,2,3,4);
                         ~~~~~~~~~
!!! error TS2304: Cannot find name 'Int8Array'.
        typedArrays[1] = Uint8Array.of(1,2,3,4);
                         ~~~~~~~~~~
!!! error TS2304: Cannot find name 'Uint8Array'.
        typedArrays[2] = Int16Array.of(1,2,3,4);
                         ~~~~~~~~~~
!!! error TS2304: Cannot find name 'Int16Array'.
        typedArrays[3] = Uint16Array.of(1,2,3,4);
                         ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Uint16Array'.
        typedArrays[4] = Int32Array.of(1,2,3,4);
                         ~~~~~~~~~~
!!! error TS2304: Cannot find name 'Int32Array'.
        typedArrays[5] = Uint32Array.of(1,2,3,4);
                         ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Uint32Array'.
        typedArrays[6] = Float32Array.of(1,2,3,4);
                         ~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Float32Array'.
        typedArrays[7] = Float64Array.of(1,2,3,4);
                         ~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Float64Array'.
        typedArrays[8] = Uint8ClampedArray.of(1,2,3,4);
                         ~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Uint8ClampedArray'.
    
        return typedArrays;
    }
    
    function CreateTypedArraysFromMapFn2<T>(obj:ArrayLike<T>, mapFn: (n:T, v:number)=> number) {
                                                ~~~~~~~~~
!!! error TS2304: Cannot find name 'ArrayLike'.
        var typedArrays = [];
        typedArrays[0] = Int8Array.from(obj, mapFn);
                         ~~~~~~~~~
!!! error TS2304: Cannot find name 'Int8Array'.
        typedArrays[1] = Uint8Array.from(obj, mapFn);
                         ~~~~~~~~~~
!!! error TS2304: Cannot find name 'Uint8Array'.
        typedArrays[2] = Int16Array.from(obj, mapFn);
                         ~~~~~~~~~~
!!! error TS2304: Cannot find name 'Int16Array'.
        typedArrays[3] = Uint16Array.from(obj, mapFn);
                         ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Uint16Array'.
        typedArrays[4] = Int32Array.from(obj, mapFn);
                         ~~~~~~~~~~
!!! error TS2304: Cannot find name 'Int32Array'.
        typedArrays[5] = Uint32Array.from(obj, mapFn);
                         ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Uint32Array'.
        typedArrays[6] = Float32Array.from(obj, mapFn);
                         ~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Float32Array'.
        typedArrays[7] = Float64Array.from(obj, mapFn);
                         ~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Float64Array'.
        typedArrays[8] = Uint8ClampedArray.from(obj, mapFn);
                         ~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Uint8ClampedArray'.
    
        return typedArrays;
    }
    
    function CreateTypedArraysFromMapFn(obj:ArrayLike<number>, mapFn: (n:number, v:number)=> number) {
                                            ~~~~~~~~~
!!! error TS2304: Cannot find name 'ArrayLike'.
        var typedArrays = [];
        typedArrays[0] = Int8Array.from(obj, mapFn);
                         ~~~~~~~~~
!!! error TS2304: Cannot find name 'Int8Array'.
        typedArrays[1] = Uint8Array.from(obj, mapFn);
                         ~~~~~~~~~~
!!! error TS2304: Cannot find name 'Uint8Array'.
        typedArrays[2] = Int16Array.from(obj, mapFn);
                         ~~~~~~~~~~
!!! error TS2304: Cannot find name 'Int16Array'.
        typedArrays[3] = Uint16Array.from(obj, mapFn);
                         ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Uint16Array'.
        typedArrays[4] = Int32Array.from(obj, mapFn);
                         ~~~~~~~~~~
!!! error TS2304: Cannot find name 'Int32Array'.
        typedArrays[5] = Uint32Array.from(obj, mapFn);
                         ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Uint32Array'.
        typedArrays[6] = Float32Array.from(obj, mapFn);
                         ~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Float32Array'.
        typedArrays[7] = Float64Array.from(obj, mapFn);
                         ~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Float64Array'.
        typedArrays[8] = Uint8ClampedArray.from(obj, mapFn);
                         ~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Uint8ClampedArray'.
    
        return typedArrays;
    }
    
    function CreateTypedArraysFromThisObj(obj:ArrayLike<number>, mapFn: (n:number, v:number)=> number, thisArg: {}) {
                                              ~~~~~~~~~
!!! error TS2304: Cannot find name 'ArrayLike'.
        var typedArrays = [];
        typedArrays[0] = Int8Array.from(obj, mapFn, thisArg);
                         ~~~~~~~~~
!!! error TS2304: Cannot find name 'Int8Array'.
        typedArrays[1] = Uint8Array.from(obj, mapFn, thisArg);
                         ~~~~~~~~~~
!!! error TS2304: Cannot find name 'Uint8Array'.
        typedArrays[2] = Int16Array.from(obj, mapFn, thisArg);
                         ~~~~~~~~~~
!!! error TS2304: Cannot find name 'Int16Array'.
        typedArrays[3] = Uint16Array.from(obj, mapFn, thisArg);
                         ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Uint16Array'.
        typedArrays[4] = Int32Array.from(obj, mapFn, thisArg);
                         ~~~~~~~~~~
!!! error TS2304: Cannot find name 'Int32Array'.
        typedArrays[5] = Uint32Array.from(obj, mapFn, thisArg);
                         ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Uint32Array'.
        typedArrays[6] = Float32Array.from(obj, mapFn, thisArg);
                         ~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Float32Array'.
        typedArrays[7] = Float64Array.from(obj, mapFn, thisArg);
                         ~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Float64Array'.
        typedArrays[8] = Uint8ClampedArray.from(obj, mapFn, thisArg);
                         ~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Uint8ClampedArray'.
    
        return typedArrays;
    }
    
    function CreateTypedArraysFromThisObj2<T>(obj:ArrayLike<T>, mapFn: (n:T, v:number)=> number, thisArg: {}) {
                                                  ~~~~~~~~~
!!! error TS2304: Cannot find name 'ArrayLike'.
        var typedArrays = [];
        typedArrays[0] = Int8Array.from(obj, mapFn, thisArg);
                         ~~~~~~~~~
!!! error TS2304: Cannot find name 'Int8Array'.
        typedArrays[1] = Uint8Array.from(obj, mapFn, thisArg);
                         ~~~~~~~~~~
!!! error TS2304: Cannot find name 'Uint8Array'.
        typedArrays[2] = Int16Array.from(obj, mapFn, thisArg);
                         ~~~~~~~~~~
!!! error TS2304: Cannot find name 'Int16Array'.
        typedArrays[3] = Uint16Array.from(obj, mapFn, thisArg);
                         ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Uint16Array'.
        typedArrays[4] = Int32Array.from(obj, mapFn, thisArg);
                         ~~~~~~~~~~
!!! error TS2304: Cannot find name 'Int32Array'.
        typedArrays[5] = Uint32Array.from(obj, mapFn, thisArg);
                         ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Uint32Array'.
        typedArrays[6] = Float32Array.from(obj, mapFn, thisArg);
                         ~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Float32Array'.
        typedArrays[7] = Float64Array.from(obj, mapFn, thisArg);
                         ~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Float64Array'.
        typedArrays[8] = Uint8ClampedArray.from(obj, mapFn, thisArg);
                         ~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'Uint8ClampedArray'.
    
        return typedArrays;
    }